; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/crypto/extr_aesni-intel_glue.c_xts_aesni_setkey.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/crypto/extr_aesni-intel_glue.c_xts_aesni_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.aesni_xts_ctx = type { i32, i32 }

@CRYPTO_TFM_RES_BAD_KEY_LEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_tfm*, i32*, i32)* @xts_aesni_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xts_aesni_setkey(%struct.crypto_tfm* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_tfm*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.aesni_xts_ctx*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %12 = call %struct.aesni_xts_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %11)
  store %struct.aesni_xts_ctx* %12, %struct.aesni_xts_ctx** %8, align 8
  %13 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %14 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %13, i32 0, i32 0
  store i32* %14, i32** %9, align 8
  %15 = load i32, i32* %7, align 4
  %16 = urem i32 %15, 2
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = load i32, i32* @CRYPTO_TFM_RES_BAD_KEY_LEN, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %19
  store i32 %22, i32* %20, align 4
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %51

25:                                               ; preds = %3
  %26 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %27 = load %struct.aesni_xts_ctx*, %struct.aesni_xts_ctx** %8, align 8
  %28 = getelementptr inbounds %struct.aesni_xts_ctx, %struct.aesni_xts_ctx* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %7, align 4
  %32 = udiv i32 %31, 2
  %33 = call i32 @aes_set_key_common(%struct.crypto_tfm* %26, i32 %29, i32* %30, i32 %32)
  store i32 %33, i32* %10, align 4
  %34 = load i32, i32* %10, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %25
  %37 = load i32, i32* %10, align 4
  store i32 %37, i32* %4, align 4
  br label %51

38:                                               ; preds = %25
  %39 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %40 = load %struct.aesni_xts_ctx*, %struct.aesni_xts_ctx** %8, align 8
  %41 = getelementptr inbounds %struct.aesni_xts_ctx, %struct.aesni_xts_ctx* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32*, i32** %6, align 8
  %44 = load i32, i32* %7, align 4
  %45 = udiv i32 %44, 2
  %46 = zext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %43, i64 %46
  %48 = load i32, i32* %7, align 4
  %49 = udiv i32 %48, 2
  %50 = call i32 @aes_set_key_common(%struct.crypto_tfm* %39, i32 %42, i32* %47, i32 %49)
  store i32 %50, i32* %4, align 4
  br label %51

51:                                               ; preds = %38, %36, %18
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local %struct.aesni_xts_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @aes_set_key_common(%struct.crypto_tfm*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
